Scrollbar and Fixes
Got a custom scrollbar set up.
As of the last push, it was impossible to interact with the sliders and buttons, and I discovered that this was because it was for some reason being placed above everything. So, I have it a z-index of -1, and that fixed the problem! It seems to be working!

--- a/js-final/js-final.css
+++ b/js-final/js-final.css
@@ -1,17 +1,17 @@
 html {
-	--spacing: 0.2em;
-  --line-transparency: 0.3;
+	--spacing: 2vw;
+  --line-transparency: 0.1;
   --line-angle: 60deg;
 	background-color: #191919;
 
 
-	/* background-image: repeating-linear-gradient(
+	background-image: repeating-linear-gradient(
 		var(--line-angle),
 		rgb(113, 41, 41, var(--line-transparency)),
 		rgb(113, 41, 41, var(--line-transparency)) var(--spacing),
 		#0000 var(--spacing),
 		#0000 calc(2* var(--spacing))
-	); */
+	);
 
 	height: 100%;
 
@@ -35,6 +35,7 @@ html {
 	top: 50%;
 	transform: translateX(-50%) translateY(-50%);
 	position: absolute;
+  z-index: -1;
 }
 
 #center-content-container {
@@ -45,9 +46,9 @@ html {
 }
 
 #settings-box {
-  width: 30vh;
-  height: 30vh;
-  background-color: rgba(187, 87, 87, 0.5);
+  width: 25vw;
+  height: 40vh;
+  background-color:	hsla(0, 40%, 30%, 0.8);
   margin: 1em;
   display: flex;
   flex-direction: column;
@@ -66,20 +67,42 @@ html {
 }
 
 #text-container {
-  width: 30vh;
-  height: 30vh;
+  width: 25vw;
+  height: 40vh;
   display: flex;
   flex-direction: column;
   margin: 1em;
+  align-items: center;
 }
 
 h1 {
   margin: 0;
   flex-grow: 0;
+  text-shadow: 0 0 1em #000, 0 0 1em #000;
 }
 
 #scrollable-textbox {
+  font-size: .9em;
   overflow-y: scroll;
-  background-color: rgba(187, 87, 87, 0.5);
+  background-color: hsla(0, 40%, 30%, 0.8);
   flex-grow: 1;
+}
+
+::-webkit-scrollbar {
+  width: 0.7em;
+  height: 0.7em;
+  background-color: #171717;
+}
+
+::-webkit-scrollbar-track {
+  background: rgba(187, 87, 87, 0.6);
+}
+
+::-webkit-scrollbar-thumb {
+  background: #171717e0;
+  /* box-shadow: 0 0 0.8em 0.1em #171717a0 ; */
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #eeeeeee0;
+  /* box-shadow: 0 0 0.5em 0.1em #aaaaaaf0 */
 }
